[package]
name = "usefix"
version = "0.1.0"
edition = "2021"

[build]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.86", default-features = false, features = [
    "backtrace",
    "std",
] }
clap = { version = "4.1.11", features = ["derive"] }
either = { version = "1.13.0", default-features = false }
enum-map = "2.7.3"
itertools = { version = "0.13.0", default-features = false }
joinery = "3.1.0"
lazy_format = "2.0.3"
nom = "7.1.3"
nom-supreme = "0.8.0"
prettyplease = { version = "0.2.20", default-features = false }
proc-macro2 = { version = "1.0.86", default-features = false, features = [
    "span-locations",
] }
rayon = "1.10.0"
syn = { version = "2.0.74", default-features = false, features = [
    "parsing",
    "full",
    "printing",
    "extra-traits",
] }
thiserror = { version = "1.0.63", default-features = false }


[dev-dependencies]
cool_asserts = "2.0.3"
